# canopus

./: .gitignore  Cargo.toml  README.md  start.sh
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/journal/: route.ts
frontend/app/api/journal/[id]/: route.ts
frontend/app/api/reports/: route.ts
frontend/app/api/reports/[id]/: route.ts
frontend/app/api/reports/generate/: route.ts
frontend/app/api/sleep/: route.ts
frontend/app/api/tasks/: route.ts
frontend/app/api/tasks/[id]/: route.ts
frontend/components/dashboard/: header.tsx  journal-section.tsx  overview-section.tsx  report-section.tsx  sidebar.tsx  sleep-section.tsx  task-section.tsx
src/: main.rs  store.rs
src/commands/: analyze.rs  attention.rs  init.rs  journal.rs  mod.rs  observe.rs  principles.rs  reflect.rs  sleep.rs  status.rs  task.rs
src/dashboard/: api.rs  main.rs
src/dashboard/static/: app.js  index.html  style.css
src/models/: attention.rs  journal.rs  mod.rs  observation.rs  principle.rs  reflection.rs  sleep.rs  task.rs
