[package]
name = "canopus"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "canopus-dashboard"
path = "src/dashboard/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
open = "5"
